@@ -1,6 +1,7 @@
 47
 ================
 
+22/06/23 Delete on process should run from code.py for multistep autoprocess #1297
 22/06/23 Assign shelter location/unit when boarding is active #623
 22/06/23 Adding boarding permissions to roles screen #623
 22/06/23 Adding boarding type with default cost #623
